@@ -4510,3 +4510,4 @@ Start... early ages
 
 2013-03-05
 - tools/bug.c: Static cleanup. Contributed by Eero Tamminen. (RFB)
+- tools/bug.c: Removed unused function try_c_string(). (VRI)
